--- a/src/styles.css
+++ b/src/styles.css
@@ -83,35 +83,12 @@ body {
   visibility: visible;
 }
 
-.slideLeft {
-  animation-name: slideLeft;
-  -webkit-animation-name: slideLeft;
-
-  animation-duration: 1s;
-  -webkit-animation-duration: 1s;
-
-  animation-timing-function: ease-in-out;
-  -webkit-animation-timing-function: ease-in-out;
-
-  visibility: visible !important;
+.nav__mobile {
+  position: relative;
+  left: -100%;
+  transition: all 0.5s ease-out;
 }
 
-@keyframes slideRight {
-  0% {
-    transform: translateX(-100%);
-  }
-
-  100% {
-    transform: translateX(0%);
-  }
-}
-
-@keyframes slideLeft {
-  0% {
-    transform: translateX(0%);
-  }
-
-  100% {
-    transform: translateX(-100%);
-  }
+.move {
+  left: 0;
 }
